--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="footer-header">social media presence</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="https://github.com/gowt7780">
+                <a class="link" href="https://github.com/gowthamnallamala">
                     github
                 </a>
             </li>
