some minor changes updated

--- a/html/projects.html
+++ b/html/projects.html
@@ -94,14 +94,14 @@
 
     </div>
     <div class="project1">
-      <h2>Good Book Recomendation </h2>
-      <p>Do you read books? You would find some good recommendations for all the genre. Made using ReactJS with love</p>
+      <h2>Travel Rating </h2>
+      <p>Do you like Travelling? You would find some good recommendations for all the genre. Made using ReactJS with love</p>
       <br>
       <div class="code">
-        <a class="source" href="https://task-9-chi.vercel.app/">LIVE PROJECT</a>
+        <a class="source" href="https://csb-pji1o0.netlify.app/">LIVE PROJECT</a>
       </div>
       <div class="code">
-        <a class="source" href="https://github.com/gowthamnallamala/GOODBOOKRECOMENDATION">VIEW SOURCE</a>
+        <a class="source" href="https://github.com/gowthamnallamala/travelliingRating">VIEW SOURCE</a>
       </div>
     </div>
     <div class="project">
@@ -109,10 +109,10 @@
       <p>A cash register manager which helps the user by telling how can he/she return the change to the customer with minimum number of notes.</p>
       <br>
       <div class="code">
-        <a class="source" href="https://rococo-pegasus-d1ef29.netlify.app/"> LIVE PROJECT</a>
+        <a class="source" href="https://cash-return-change.netlify.app/"> LIVE PROJECT</a>
       </div>
       <div class="code">
-        <a class="source" href="https://github.com/gowthamnallamala/cash-register">VIEW SOURCE</a>
+        <a class="source" href="https://github.com/gowthamnallamala/CashRegister">VIEW SOURCE</a>
       </div>
 
     </div>
@@ -121,7 +121,7 @@
       <p>A website which can help you to check whether your birthday is lucky or not.</p>
       <br>   
       <div class="code">
-        <a class="source" href="https://superb-rolypoly-885540.netlify.app/">LIVE PROJECT</a>
+        <a class="source" href="https://luckiest-birthday-blast.netlify.app/">LIVE PROJECT</a>
       </div>
       <div class="code">
         <a class="source" href="https://github.com/gowthamnallamala/biorthday-lucky">VIEW SOURCE</a>
@@ -133,11 +133,11 @@
       <p>A website which helps you to learn about triangles</p>
       <br>
        <div class="code">
-         <a class="source" href="https://dazzling-arithmetic-a91dfa.netlify.app/">LIVE PROJECT</a>
+         <a class="source" href="https://build-triangles.netlify.app/">LIVE PROJECT</a>
 
        </div>
        <div class="code">
-         <a class="source" href="https://github.com/gowthamnallamala/fun-with-triangles">VIEW SOURCE</a>
+         <a class="source" href="https://github.com/gowthamnallamala/build-Triangles">VIEW SOURCE</a>
 
        </div>
     </div>
@@ -146,10 +146,10 @@
       <p>App which checks whether your birthday is a palindrome birthday or not.</p>
       <br>
       <div class="code">
-        <a class="source" href="https://fantastic-mousse-7f5d82.netlify.app/">LIVE PROJECT</a>
+        <a class="source" href="https://palindrombirthdaycheck.netlify.app/">LIVE PROJECT</a>
       </div>   
       <div class="code">
-        <a class="source" href="https://github.com/gowthamnallamala/Palindrome-Birthday">VIEW SOURCE</a>
+        <a class="source" href="https://github.com/gowthamnallamala/Birthday-Palindrome">VIEW SOURCE</a>
       </div>
     </div>
     <div class="project">
@@ -158,10 +158,10 @@
       <p>A website which helps user how much profit or loss he/she is making in percentage & absolute value</p>
       <br>
       <div class="code">
-        <a class="source" href="https://statuesque-fenglisu-032a8b.netlify.app/">LIVE PROJECT</a>
+        <a class="source" href="https://profit-loss-calculato.netlify.app/">LIVE PROJECT</a>
       </div>
       <div class="code">
-        <a class="source" href="https://github.com/gowthamnallamala/Profit-OR-Loss">VIEW SOURCE</a>
+        <a class="source" href="https://github.com/gowthamnallamala/profitlosscalculator">VIEW SOURCE</a>
 
       </div>
     </div>
